--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "jest"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.17.2"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,6 @@
   "homepage": "https://github.com/Jaswal1p/handy-note-taker#readme",
   "devDependencies": {
     "jest": "^27.5.1"
-  }
+  },
+  "keywords": []
 }
